--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "spruce",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "license": "MIT",
   "scripts": {
-    "dev": "elm-live src/Main.elm -e node_modules/.bin/elm -- --debug",
-    "dev2": "webpack-dev-server",
-    "dev3": "parcel -p 8000 watch ./src/index.html",
-    "notes": "parcel -p 3000 watch ./src/notes.html"
+    "elm": "elm-live src/Main.elm -e node_modules/.bin/elm -- --debug",
+    "dev:el": "NODE_ENV=development electron .",
+    "dev:main": "webpack-dev-server --config ./webpack.main.js",
+    "dev:notes": "webpack-dev-server --config ./webpack.notes.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "elm": "^0.19.0-bugfix6",
     "elm-format": "^0.8.1",
@@ -17,10 +20,11 @@
     "elm-live": "^3.4.0",
     "elm-webpack-loader": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "parcel-bundler": "^1.11.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "electron": "^4.0.4"
+  }
 }
